@@ -1,3 +1,8 @@
+2004-06-10 Alvaro del Castillo  <acs@barrapunto.com>
+
+	* src/planner-task-dialog.[ch]: implemented undo for predecessor
+	task dialog editor (add/remove predecessor, edit a predecessor)
+	
 2004-06-08  Richard Hult  <richard@imendio.com>
 
 	* libplanner/mrp-object.c: (mrp_object_get_project):
